--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,10 +78,10 @@ flutter:
   fonts:
     - family: Outfit
       fonts:
-        - asset: fonts/Outfit-Bold.ttf
-        - asset: fonts/Outfit-Black.ttf
-        - asset: fonts/Outfit-Medium.ttf
-        - asset: fonts/outfit-Regular.ttf
+        - asset: assets/fonts/Outfit-Bold.ttf
+        - asset: assets/fonts/Outfit-Black.ttf
+        - asset: assets/fonts/Outfit-Medium.ttf
+        - asset: assets/fonts/outfit-Regular.ttf
         
     
   #
